# RM_Syst_MAX

./: .gitignore  README.md  README_ALL.md
MAX/: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  MAX_API.md  PLAN.md  README.md  START.md  compose.prod.yaml  compose.yaml  pyproject.toml
MAX/app/: __init__.py  broadcast_worker.py  main.py
MAX/app/api/: __init__.py  admin_audience_routes.py  admin_audience_service.py  assignment_routes.py  auth_routes.py  bot_invitation.py  catalog_routes.py  dependencies.py  family_routes.py  family_service.py  invitation_routes.py  invitation_service.py  list_action_routes.py  list_preference_routes.py  list_removal_service.py  migration_routes.py  normalization.py  realtime_routes.py  routes.py  schemas.py  share_links.py  shared_space_service.py  starter_lists.py
MAX/app/bots/: __init__.py  broadcasts.py  lists.py  shopping.py  texts.py
MAX/app/db/: base.py  seed.py  seed_data.py  session.py
MAX/app/db/bootstrap_catalog/: RECIPE_SOURCES.md  dish-baking.json  dish-breakfast.json  dish-fish.json  dish-meat.json  (+19 more)
MAX/app/static/: miniapp.html
MAX/migrations/: env.py
MAX/migrations/versions/: a82d1c7f4e90_user_list_pins.py  b7f6e23d9a11_catalog_recipes.py  c38f9a610b22_bot_audience_broadcasts.py  c4a9f0821d33_personal_catalog.py  d91e6b207af4_platform_identities.py  e48ca3afc6c6_initial_core.py  f14c8a9d22b1_user_sessions_and_marks.py
MAX/tests/: test_admin_audience.py  test_bot.py  test_bot_shopping.py  test_catalog_data.py  test_database_api.py  test_main.py  test_realtime.py  test_telegram.py
(+69 files in other folders)
