[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "shopping-assistant"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.20,<4",
  "alembic>=1.18,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "python-dotenv>=1.0,<2",
  "sqlalchemy[asyncio]>=2.0.46,<3",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=1.0,<2",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
app = ["certs/*.pem", "db/bootstrap_catalog/*.json", "static/*.html", "static/css/*.css", "static/js/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
